lab 2 advanced css completed

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ body{
                         <span class="fa fa-play"></span>
                     </div>
                     <h4>India Indie</h4>
-                    <p style="font-color: white">New Music From Anuv jain, Karan</p>
+                    <p style="color: white">New Music From Anuv jain, Karan</p>
                 </div>
                 <div class="item">
                     <img src="malang.webp" />
