--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sign Up – Spotify</title>
+  <title>Log In – Spotify</title>
   <style>
     body {
       background: black;
@@ -21,7 +21,10 @@
       text-align: center;
     }
 
-    h2 { color: white; }
+    h2 {
+      color: white;
+      margin-bottom: 20px;
+    }
 
     input {
       width: 100%;
@@ -41,6 +44,7 @@
       border-radius: 30px;
       font-weight: bold;
       cursor: pointer;
+      margin-top: 10px;
     }
 
     a {
@@ -48,24 +52,27 @@
       text-decoration: none;
       font-size: 14px;
     }
+
+    p {
+      color: gray;
+      margin-top: 15px;
+    }
   </style>
 </head>
 <body>
 
   <div class="auth-box">
-    <h2>Sign up for Spotify</h2>
+    <h2>Log in to Spotify</h2>
 
-    <form action="signup.php" method="POST">
-  <input type="text" name="username" placeholder="Username" required>
-  <input type="email" name="email" placeholder="Email" required>
-  <input type="password" name="password" placeholder="Password" required>
-  <button type="submit">Sign Up</button>
-</form>
-
+    <form action="login.php" method="POST">
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit">Log In</button>
+    </form>
 
     <p>
-      Already have an account?
-      <a href="login.html">Log in</a>
+      Don’t have an account?
+      <a href="signup.html">Sign up</a>
     </p>
   </div>
 
