--- a/login.html
+++ b/login.html
@@ -1,80 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Log In – Spotify</title>
-  <style>
-    body {
-      background: black;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .auth-box {
-      background: #121212;
-      padding: 30px;
-      width: 350px;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    h2 {
-      color: white;
-      margin-bottom: 20px;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      background: #181818;
-      border: none;
-      color: white;
-      border-radius: 5px;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #1db954;
-      border: none;
-      border-radius: 30px;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    a {
-      color: #1db954;
-      text-decoration: none;
-      font-size: 14px;
-    }
-
-    p {
-      color: gray;
-      margin-top: 15px;
-    }
-  </style>
+    <title>Login</title>
 </head>
 <body>
+<h2>User Login</h2>
 
-  <div class="auth-box">
-    <h2>Log in to Spotify</h2>
+<form method="post" action="../actions/login_action.php">
+    Email:<br>
+    <input type="email" name="email"><br><br>
+    Password:<br>
+    <input type="password" name="pass"><br><br>
+    <input type="submit" value="Login">
+</form>
 
-    <form action="login.php" method="POST">
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="password" name="password" placeholder="Password" required>
-      <button type="submit">Log In</button>
-    </form>
-
-    <p>
-      Don’t have an account?
-      <a href="signup.html">Sign up</a>
-    </p>
-  </div>
-
+<a href="signup.html">Don't have account? Signup</a>
 </body>
 </html>
